Bug 820061 - Clamp layer scale factors to inverse powers of 2 as well. r=roc